@@ -2394,3 +2394,4 @@ seen. gmtime warning still there
   NO_FLOOD_AWAY is now enabled and away-flood is set to 4 per 120s by default.
 - Fixed a double OperOverride notice bug reported by DukePyrolator (#0001180).
 - Doc fixes/updates reported by Angrywolf (#0001163, #0001176).
+- Fixed a /rehash crash regarding badword all & regex badwords, reported by Angrywolf (#0001230).
